Fixed profile image uncentered when collapsed, and implemented friend index to the profile page

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -133,6 +133,10 @@
   width: 24px;
 }
 
+.expand-sidenav #profile-button-pic-container{
+  margin-right: 12px;
+}
+
 .sidenav-btn img{  
   width: 100%;
   transform: scale(1.25);
